--- a/dbt-template/profiles.yml
+++ b/dbt-template/profiles.yml
@@ -4,7 +4,7 @@ dbt-mineria:
       dataset: Supermercado
       job_execution_timeout_seconds: 1200
       job_retries: 1
-      keyfile: /workspaces/codespaces-blank/dbt-template/key.json
+      keyfile: ./key.json
       location: US
       method: service-account
       priority: interactive
